<resources>
    <string name="app_name">Studi Kasus</string>
    <string name="name">Nama</string>
    <string name="bornplace">Tempat Lahir</string>
    <string name="borndate">Tanggal Lahir</string>
    <string name="submit">Submit</string>
    <string name="result">Result</string>
    <string name="address">Alamat</string>
    <string name="number">No HP</string>
    <string name="hobby">Hobi</string>
    <string name="hope">Keinginan</string>
</resources>